--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,72 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    <com.OdiousPanda.thefweather.CustomUI.MovableFAB
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:backgroundTint="#fff"
+        app:rippleColor="@color/bg_screen1"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add_location_b"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/location_list_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#fff">
 
+        <TextView
+            android:id="@+id/location_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="center"
+            android:padding="@dimen/margin_16"
+            android:text="@string/location_list_title"
+            android:textColor="#000"
+            android:textSize="@dimen/text_view_20sp"
+            app:fontFamily="@font/nunito"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+            " />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="@dimen/margin_16"
+            android:text="This feature is currently under development"
+            android:textColor="#000"
+            android:textSize="@dimen/text_view_18sp"
+            app:fontFamily="@font/nunito"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/btn_go_back"
+            android:layout_width="@dimen/icon_36dp"
+            android:layout_height="@dimen/icon_36dp"
+            android:layout_marginStart="@dimen/margin_16"
+            android:src="@drawable/ic_arrow_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/location_title"
+            app:layout_constraintBottom_toBottomOf="@id/location_title"/>
+
+        <ImageView
+            android:id="@+id/btn_add_location"
+            android:layout_width="@dimen/icon_36dp"
+            android:layout_height="@dimen/icon_36dp"
+            android:layout_marginEnd="@dimen/margin_16"
+            android:src="@drawable/ic_add_b"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/location_title"
+            app:layout_constraintBottom_toBottomOf="@id/location_title" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <RelativeLayout
         android:id="@+id/loading_layout"
         android:layout_width="match_parent"
