--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -318,7 +318,7 @@
             android:layout_marginBottom="@dimen/margin_24">
             <TextView
                 android:id="@+id/tv_rate"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 app:fontFamily="@font/nunito"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/text_view_18sp"
@@ -326,7 +326,7 @@
                 android:text="@string/rate_setting_title"/>
             <TextView
                 android:id="@+id/tv_about"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 app:fontFamily="@font/nunito"
                 android:layout_marginTop="@dimen/margin_32"
                 android:layout_height="wrap_content"
