--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -43,13 +43,15 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="UseCompoundDrawables">
 
                 <ImageView
                     android:id="@+id/ic_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    tools:ignore="ContentDescription"/>
 
                 <TextView
                     android:id="@+id/tv_location"
@@ -284,7 +286,8 @@
                 android:layout_width="@dimen/margin_16"
                 android:layout_height="@dimen/margin_16"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="ContentDescription" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
@@ -316,7 +319,8 @@
                     android:src="#333333"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintLeft_toRightOf="parent" />
+                    app:layout_constraintLeft_toRightOf="parent"
+                    tools:ignore="ContentDescription"/>
 
                 <ImageView
                     android:id="@+id/windmill_base"
@@ -325,7 +329,8 @@
                     android:layout_marginStart="@dimen/margin_16"
                     android:src="@drawable/windmill_base"
                     app:layout_constraintBottom_toTopOf="@+id/ground"
-                    app:layout_constraintLeft_toLeftOf="parent" />
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    tools:ignore="ContentDescription"/>
 
                 <ImageView
                     android:id="@+id/windmill_wings"
@@ -335,7 +340,8 @@
                     app:layout_constraintBottom_toBottomOf="@id/windmill_base"
                     app:layout_constraintLeft_toLeftOf="@id/windmill_base"
                     app:layout_constraintRight_toRightOf="@id/windmill_base"
-                    app:layout_constraintTop_toTopOf="@id/windmill_base" />
+                    app:layout_constraintTop_toTopOf="@id/windmill_base"
+                    tools:ignore="ContentDescription"/>
 
                 <TextView
                     android:id="@+id/wind_speed"
