--- a/app/src/main/res/layout/normal_widget.xml
+++ b/app/src/main/res/layout/normal_widget.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/widget_layout"
@@ -16,9 +17,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="@dimen/margin_16"
             android:layout_gravity="bottom"
-            android:paddingStart="@dimen/margin_16">
+            android:paddingStart="@dimen/margin_16"
+            tools:ignore="RtlSymmetry">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -29,13 +30,15 @@
                     android:id="@+id/widget_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    tools:ignore="ContentDescription"
                     />
                 <ImageView
                     android:id="@+id/widget_day_night"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_8"
-                    android:layout_gravity="bottom"/>
+                    android:layout_gravity="bottom"
+                    tools:ignore="ContentDescription"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -45,17 +48,20 @@
                 <ImageView
                     android:id="@+id/widget_date"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    tools:ignore="ContentDescription"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_4"
                     android:layout_marginEnd="@dimen/margin_4"
-                    android:src="@drawable/ic_location_w"/>
+                    android:src="@drawable/ic_location_w"
+                    tools:ignore="ContentDescription"/>
                 <ImageView
                     android:id="@+id/widget_location"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    tools:ignore="ContentDescription"/>
             </LinearLayout>
 
 
@@ -67,8 +73,8 @@
             android:layout_weight="1"
             android:gravity="end"
             android:orientation="vertical"
-            android:paddingRight="@dimen/margin_16"
-            android:paddingEnd="@dimen/margin_16">
+            android:paddingEnd="@dimen/margin_16"
+            tools:ignore="RtlSymmetry">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -80,17 +86,17 @@
                     android:id="@+id/widget_icon"
                     android:layout_width="@dimen/icon_90dp"
                     android:layout_gravity="end"
-                    android:layout_marginRight="@dimen/margin_n_16"
-                    android:layout_height="@dimen/icon_90dp" />
+                    android:layout_marginEnd="@dimen/margin_n_16"
+                    android:layout_height="@dimen/icon_90dp"
+                    tools:ignore="ContentDescription"/>
                 <ImageView
                     android:id="@+id/tv_temp_widget"
                     android:layout_width="wrap_content"
                     android:layout_gravity="center|end"
-
                     android:layout_marginTop="@dimen/margin_4"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="@dimen/margin_16"
-                    android:paddingStart="@dimen/margin_16" />
+                    android:paddingStart="@dimen/margin_16"
+                    tools:ignore="ContentDescription"/>
             </LinearLayout>
             <ImageView
                 android:id="@+id/tv_reaFeel_widget"
@@ -98,8 +104,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:gravity="end"
-                android:paddingLeft="@dimen/margin_16"
-                android:paddingStart="@dimen/margin_16" />
+                android:paddingStart="@dimen/margin_16"
+                tools:ignore="ContentDescription"/>
         </LinearLayout>
 
 
@@ -116,16 +122,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_below="@id/layout_data"/>
+            tools:ignore="ContentDescription"/>
 
         <ImageView
             android:id="@+id/quote_sub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_below="@id/quote_main" />
+            tools:ignore="ContentDescription" />
     </LinearLayout>
     <RelativeLayout
         android:id="@+id/widget_loading_layout"
