--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -3,20 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/bg_screen1">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/bg_screen1"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <ImageView
             android:id="@+id/instruction_pic"
             android:layout_width="@dimen/icon_90dp"
             android:layout_height="@dimen/icon_90dp"
-            android:src="@drawable/happycloud"/>
+            android:src="@drawable/happy_cloud"
+            tools:ignore="ContentDescription"/>
 
         <TextView
             android:layout_width="wrap_content"
