--- a/app/src/main/res/layout/normal_widget.xml
+++ b/app/src/main/res/layout/normal_widget.xml
@@ -51,8 +51,8 @@
                     android:layout_height="wrap_content"
                     tools:ignore="ContentDescription"/>
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/margin_16"
+                    android:layout_height="@dimen/margin_16"
                     android:layout_marginStart="@dimen/margin_4"
                     android:layout_marginEnd="@dimen/margin_4"
                     android:src="@drawable/ic_location_w"
