--- a/app/src/main/res/values-sw320dp/dimens.xml
+++ b/app/src/main/res/values-sw320dp/dimens.xml
@@ -89,8 +89,11 @@
   <dimen name="icon_36dp">
     32.0dp
   </dimen>
+  <dimen name="icon_48dp">
+    42.67dp
+  </dimen>
   <dimen name="big_text">
-    74.67sp
+    64.0sp
   </dimen>
   <dimen name="text_view_12sp">
     10.67sp
