--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -89,8 +89,11 @@
   <dimen name="icon_36dp">
     36dp
   </dimen>
+  <dimen name="icon_48dp">
+    48dp
+  </dimen>
   <dimen name="big_text">
-    84sp
+    72sp
   </dimen>
   <dimen name="text_view_12sp">
     12sp
