--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -89,8 +89,11 @@
   <dimen name="icon_36dp">
     41.1dp
   </dimen>
+  <dimen name="icon_48dp">
+    54.8dp
+  </dimen>
   <dimen name="big_text">
-    95.9sp
+    82.2sp
   </dimen>
   <dimen name="text_view_12sp">
     13.7sp
