--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -89,8 +89,11 @@
   <dimen name="icon_36dp">
     54.0dp
   </dimen>
+  <dimen name="icon_48dp">
+    72.0dp
+  </dimen>
   <dimen name="big_text">
-    126.0sp
+    108.0sp
   </dimen>
   <dimen name="text_view_12sp">
     18.0sp
