--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -89,8 +89,11 @@
   <dimen name="icon_36dp">
     60.0dp
   </dimen>
+  <dimen name="icon_48dp">
+    80.0dp
+  </dimen>
   <dimen name="big_text">
-    140.0sp
+    120.0sp
   </dimen>
   <dimen name="text_view_12sp">
     20.0sp
