--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,7 +30,8 @@
     <dimen name="icon_90dp">90dp</dimen>
     <dimen name="icon_24dp">24dp</dimen>
     <dimen name="icon_36dp">36dp</dimen>
-    <dimen name="big_text">84sp</dimen>
+    <dimen name="icon_48dp">48dp</dimen>
+    <dimen name="big_text">72sp</dimen>
     <dimen name="text_view_12sp">12sp</dimen>
     <dimen name="text_view_14sp">14sp</dimen>
     <dimen name="text_view_18sp">18sp</dimen>
