--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -15,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <ImageView
+        android:layout_gravity="center"
         android:id="@+id/icon_forecast"
         android:layout_width="@dimen/icon_90dp"
         android:layout_height="@dimen/icon_90dp"
