--- a/app/src/main/res/layout/location_list_item.xml
+++ b/app/src/main/res/layout/location_list_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="2"
+    android:background="#ffffff"
     android:baselineAligned="false">
     <LinearLayout
         android:layout_width="0dp"
