--- a/app/src/main/res/values-sw320dp/dimens.xml
+++ b/app/src/main/res/values-sw320dp/dimens.xml
@@ -1,4 +1,10 @@
 <resources>
+  <dimen name="init_scroll_welcome">
+    840.0px
+  </dimen>
+  <dimen name="minimum_screen_width">
+    320.0dp
+  </dimen>
   <dimen name="activity_horizontal_margin">
     14.22dp
   </dimen>
@@ -109,6 +115,9 @@
   </dimen>
   <dimen name="text_view_24sp">
     21.33sp
+  </dimen>
+  <dimen name="text_view_30sp">
+    26.67sp
   </dimen>
   <dimen name="text_view_36sp">
     32.0sp
