--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -1,4 +1,10 @@
 <resources>
+  <dimen name="init_scroll_welcome">
+    945px
+  </dimen>
+  <dimen name="minimum_screen_width">
+    360dp
+  </dimen>
   <dimen name="activity_horizontal_margin">
     16dp
   </dimen>
@@ -109,6 +115,9 @@
   </dimen>
   <dimen name="text_view_24sp">
     24sp
+  </dimen>
+  <dimen name="text_view_30sp">
+    30sp
   </dimen>
   <dimen name="text_view_36sp">
     36sp
