--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -1,4 +1,10 @@
 <resources>
+  <dimen name="init_scroll_welcome">
+    1078.88px
+  </dimen>
+  <dimen name="minimum_screen_width">
+    411.0dp
+  </dimen>
   <dimen name="activity_horizontal_margin">
     18.27dp
   </dimen>
@@ -109,6 +115,9 @@
   </dimen>
   <dimen name="text_view_24sp">
     27.4sp
+  </dimen>
+  <dimen name="text_view_30sp">
+    34.25sp
   </dimen>
   <dimen name="text_view_36sp">
     41.1sp
