--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -1,4 +1,10 @@
 <resources>
+  <dimen name="init_scroll_welcome">
+    1260.0px
+  </dimen>
+  <dimen name="minimum_screen_width">
+    480.0dp
+  </dimen>
   <dimen name="activity_horizontal_margin">
     21.33dp
   </dimen>
@@ -109,6 +115,9 @@
   </dimen>
   <dimen name="text_view_24sp">
     32.0sp
+  </dimen>
+  <dimen name="text_view_30sp">
+    40.0sp
   </dimen>
   <dimen name="text_view_36sp">
     48.0sp
