--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -1,4 +1,10 @@
 <resources>
+  <dimen name="init_scroll_welcome">
+    1417.5px
+  </dimen>
+  <dimen name="minimum_screen_width">
+    540.0dp
+  </dimen>
   <dimen name="activity_horizontal_margin">
     24.0dp
   </dimen>
@@ -109,6 +115,9 @@
   </dimen>
   <dimen name="text_view_24sp">
     36.0sp
+  </dimen>
+  <dimen name="text_view_30sp">
+    45.0sp
   </dimen>
   <dimen name="text_view_36sp">
     54.0sp
