--- a/app/src/main/res/layout/normal_widget.xml
+++ b/app/src/main/res/layout/normal_widget.xml
@@ -4,51 +4,44 @@
     android:layout_height="match_parent"
     android:id="@+id/widget_layout"
     android:orientation="vertical">
-    <LinearLayout
-        android:id="@+id/layout_data"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-
-        android:weightSum="2"
-        android:baselineAligned="false">
         <LinearLayout
-            android:layout_weight="1"
-            android:layout_width="0dp"
+            android:id="@+id/layout_data"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="start"
             android:orientation="vertical"
-            android:layout_gravity="bottom"
-            android:paddingStart="@dimen/margin_16"
+            android:paddingEnd="@dimen/margin_16"
             tools:ignore="RtlSymmetry">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="bottom"
-                android:layout_marginTop="@dimen/margin_8">
+                android:layout_marginBottom="@dimen/margin_n_8">
                 <ImageView
-                    android:id="@+id/widget_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="ContentDescription"
-                    />
+                    android:id="@+id/widget_icon"
+                    android:layout_width="@dimen/icon_90dp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="@dimen/margin_n_16"
+                    android:layout_height="@dimen/icon_90dp"
+                    tools:ignore="ContentDescription"/>
                 <ImageView
-                    android:id="@+id/widget_day_night"
+                    android:id="@+id/tv_temp_widget"
                     android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/margin_4"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/margin_8"
-                    android:layout_gravity="bottom"
+                    android:paddingStart="@dimen/margin_16"
                     tools:ignore="ContentDescription"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="bottom">
+                android:orientation="horizontal">
                 <ImageView
-                    android:id="@+id/widget_date"
+                    android:id="@+id/tv_reaFeel_widget"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/margin_16"
                     tools:ignore="ContentDescription"/>
                 <ImageView
                     android:layout_width="@dimen/margin_16"
@@ -64,52 +57,7 @@
                     tools:ignore="ContentDescription"/>
             </LinearLayout>
 
-
-
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:orientation="vertical"
-            android:paddingEnd="@dimen/margin_16"
-            tools:ignore="RtlSymmetry">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="end"
-                android:layout_marginBottom="@dimen/margin_n_8">
-
-                <ImageView
-                    android:id="@+id/widget_icon"
-                    android:layout_width="@dimen/icon_90dp"
-                    android:layout_gravity="end"
-                    android:layout_marginEnd="@dimen/margin_n_16"
-                    android:layout_height="@dimen/icon_90dp"
-                    tools:ignore="ContentDescription"/>
-                <ImageView
-                    android:id="@+id/tv_temp_widget"
-                    android:layout_width="wrap_content"
-                    android:layout_gravity="center|end"
-                    android:layout_marginTop="@dimen/margin_4"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="@dimen/margin_16"
-                    tools:ignore="ContentDescription"/>
-            </LinearLayout>
-            <ImageView
-                android:id="@+id/tv_reaFeel_widget"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:gravity="end"
-                android:paddingStart="@dimen/margin_16"
-                tools:ignore="ContentDescription"/>
-        </LinearLayout>
-
-
-    </LinearLayout>
     <LinearLayout
         android:id="@+id/widget_quote_layout"
         android:layout_width="match_parent"
