--- a/app/src/main/res/xml/normal_widget_info.xml
+++ b/app/src/main/res/xml/normal_widget_info.xml
@@ -2,9 +2,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/normal_widget"
     android:initialLayout="@layout/normal_widget"
-    android:minWidth="250dp"
+    android:minWidth="180dp"
     android:minHeight="40dp"
     android:previewImage="@drawable/widget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="180000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen"/>
