--- a/app/src/main/res/layout/about_me_layout.xml
+++ b/app/src/main/res/layout/about_me_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/about_me_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,67 +7,67 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff">
-
+    <ImageView
+        android:id="@+id/btn_close_about"
+        android:layout_width="@dimen/icon_36dp"
+        android:layout_height="@dimen/icon_36dp"
+        android:layout_marginStart="@dimen/margin_16"
+        android:src="@drawable/ic_round_arrow_b"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/about_me_title"
+        app:layout_constraintBottom_toBottomOf="@id/about_me_title"
+        tools:ignore="ContentDescription" />
     <TextView
         android:id="@+id/about_me_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#DA5F6A"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:gravity="center"
-        android:padding="@dimen/margin_8"
-        android:text="@string/about_dialog_heading"
-        android:textColor="#ffffff"
-        android:textSize="@dimen/text_view_24sp"
+        android:padding="@dimen/margin_16"
+        android:text="@string/about_setting_title"
+        android:textColor="#000"
+        android:textSize="@dimen/text_view_20sp"
         app:fontFamily="@font/nunito"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:padding="@dimen/margin_32"
-        android:text="@string/about_dialog_intro"
-        android:textColor="#000000"
-        android:textSize="@dimen/text_view_20sp"
-        app:fontFamily="@font/nunito"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/about_me_title" />
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingLeft="@dimen/margin_32"
-        android:paddingRight="@dimen/margin_32"
-        android:paddingBottom="@dimen/margin_32"
-        android:text="@string/about_dialog_outro"
-        android:textColor="#000000"
-        android:textSize="@dimen/text_view_20sp"
-        app:fontFamily="@font/nunito"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:orientation="vertical"
 
-    <Button
-        android:id="@+id/btn_close_about"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="#DA5F6A"
-        android:text="@string/about_dialog_close_text"
-        android:textAllCaps="false"
-        android:textColor="#ffffff"
-        android:textSize="@dimen/text_view_20sp"
-        app:fontFamily="@font/nunito"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/about_me_title"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:paddingStart="@dimen/margin_32"
+            android:paddingEnd="@dimen/margin_32"
+            android:paddingBottom="@dimen/margin_32"
+            android:text="@string/about_dialog_intro"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_view_20sp"
+            app:fontFamily="@font/nunito" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingStart="@dimen/margin_32"
+            android:paddingEnd="@dimen/margin_32"
+            android:paddingBottom="@dimen/margin_32"
+            android:text="@string/about_dialog_outro"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_view_20sp"
+            app:fontFamily="@font/nunito" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
