--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -246,7 +246,17 @@
             android:layout_marginTop="@dimen/margin_16"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:padding="@dimen/margin_8">
-
+            <ProgressBar
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/aqi_progress_bar"
+                android:max="100"
+                android:indeterminate="true"
+                android:padding="@dimen/margin_8"
+                app:layout_constraintTop_toBottomOf="@id/tv_aqi_title"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:progress="40" />
             <TextView
                 android:id="@+id/tv_aqi_title"
                 android:layout_width="wrap_content"
